Adding menu, preferences and related boost configuration

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:theme="@style/AppTheme">
 
         <activity android:name=".ui.detail.DetailActivity" />
+        <activity android:name=".ui.settings.SettingsActivity" />
 
         <activity android:name="cz.muni.fi.pv239.boilercontroller.ui.main.MainActivity">
             <intent-filter>
