Improving readability and some preparation for screen rotating

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
 
         <activity android:name=".ui.detail.DetailActivity" />
         <activity android:name=".ui.settings.SettingsActivity" />
-        <activity android:name="cz.muni.fi.pv239.boilercontroller.ui.main.MainActivity" />
+        <activity android:name="cz.muni.fi.pv239.boilercontroller.ui.main.MainActivity"
+            android:screenOrientation = "portrait" />
         <activity android:name="cz.muni.fi.pv239.boilercontroller.ui.login.LoginActivity" />
 
         <activity android:name="cz.muni.fi.pv239.boilercontroller.ui.splash.SplashActivity"
